
Changelog:
==========

v1.02

- New features

- Fixes

Regression since 0.98, server would not start on some machines

v1.01:

- New features

Mac OSX version !! (thanks to Robin Mulder)
Audio High Fidelity engine: 24bits/96kHz/5.1 FLAC support (HDMI receiver mandatory)
French localization
Audio/Subtitles priority settings (same as Haali Media Splitter)
Truetype font setting, with some new codepages, for asian subtitles

- Fixes:

m4a and aac are now transcoded by default (iTunes Apple Lossless compatibility)
seeking issues with dvr-ms and tsMuxer with AC3/PCM mode
Displayed aspect ratio preserved


v1.00:

- New Features

GPL licensing :)
IDX/SUB support for AviSynth ONLY
Revamped some UI, especially transcoding settings
First attempt to make an LPCM or AC3 automatic conversion with tsMuxer (seeking isn't working well and demuxed audio delays are not managed)
AviSynth script is now really fully customizable

- Fixes

VIDEO_TS folders are now case insensitive
Yet another flac parsing bug
Sync issues management for xvid/mp3
.ass subtitles files support
UUID random generation, it's now possible to launch multiple servers on one network.
Added wmv binary codecs in Windows package for smooth WMV-HD transcoding  
Rare and random video glitch due to another seeking bug


v0.99:

- New features:

DVD ISOs images / VIDEO_TS Folder transcoder
DVR-MS support (need feedback)
Better subtitles configuration
Small things: FAQ, Thumbnail seeking position, UI changes, New Options, etc.

- Fixes:

Network/Transcode optimization: Wifi/Homeplug streaming should be smoother
A/V out of sync correction
Unsupported data error on almost SD videos when maximum bitrate was fixed
tsMuxer broken on Linux
Videos with FLAC audio tracks are now muxable to LPCM, along with DTS
Videos paused due to seeking bug
Audio files parsing method changes (Hope this will solve issues with some flac files)
Faster transcode start
Better support for audio low sample rates (<= 22kHz) based files