@@ -4,7 +4,6 @@
 	<classpathentry kind="lib" path="lib/commons-logging-api-1.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/java-unrar-0.2.jar"/>
 	<classpathentry kind="lib" path="lib/nanoxml-2.2.3.jar"/>
-	<classpathentry kind="lib" path="lib/entagged-cvs.jar"/>
 	<classpathentry kind="lib" path="lib/forms-1.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/looks-2.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/jna.jar"/>
@@ -13,5 +12,6 @@
 	<classpathentry kind="lib" path="lib/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-all-1.2RC2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/jaudiotagger.jar"/>
 	<classpathentry kind="output" path="eclipse-classes"/>
 </classpath>
